--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "material-ui": "^0.16.7",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-tap-event-plugin": "^2.0.1"
+    "react-lightwallet": "^0.1.10",
+    "react-tap-event-plugin": "^2.0.1",
+    "web3": "^0.18.2"
   },
   "scripts": {
     "start": "react-scripts start",
