--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "react-scripts": "0.9.0"
   },
   "dependencies": {
+    "bignumber.js": "^4.0.0",
     "material-ui": "^0.16.7",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-lightwallet": "^0.1.10",
+    "react-flexgrid": "^0.8.0",
+    "react-helmet": "^4.0.0",
+    "react-router": "^3.0.2",
     "react-tap-event-plugin": "^2.0.1",
     "web3": "^0.18.2"
   },
