--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "react-dom": "^15.4.2",
     "react-flexgrid": "^0.8.0",
     "react-helmet": "^4.0.0",
+    "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
     "react-tap-event-plugin": "^2.0.1",
+    "redux": "^3.6.0",
     "web3": "^0.18.2"
   },
   "scripts": {
