--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router": "^3.0.2",
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
+    "truffle-contract": "^1.1.10",
     "web3": "^0.18.2"
   },
   "scripts": {
